<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:playpauseview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ggggg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:elevation="4dp"
    android:orientation="vertical">



    <RelativeLayout
        android:id="@+id/slidepanelchildtwo_topviewtwo"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blur"
            android:elevation="4dp">


            <RelativeLayout
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingRight="5dp">

                <ImageView
                    android:id="@+id/albumArt_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="20dp"
                    android:padding="10dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/option_songName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/albumArt_player"
                    android:layout_centerVertical="true"
                    android:fontFamily="serif-monospace"
                    android:text="SomeThing Inthe air"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/option_artist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/option_songName"
                    android:layout_toRightOf="@id/albumArt_player"
                    android:fontFamily="serif-monospace"
                    android:text="by-Tyler Swift"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#605555" />
            </RelativeLayout>
        </LinearLayout>


    </RelativeLayout>



    <TextView
        android:id="@+id/play_now"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/selectableItemBackground"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/play_now"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:id="@+id/View_details"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/selectableItemBackground"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/view_details"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/Download"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/selectableItemBackground"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/downloads"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/add_to_favorite"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:visibility="gone"
        android:text="Add to Favorites"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/ratings"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:visibility="gone"
        android:text="Ratings"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="Share"
        android:visibility="gone"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:id="@+id/rename"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/rename"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:id="@+id/remove_from_list"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/remove_from_list"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:id="@+id/remove_Playlist_content"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/remove_from_playlist"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:id="@+id/add_to_Playlist"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/add_to_playlist"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:id="@+id/add_to_Queue"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/add_to_Queue"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:id="@+id/Remove_from_Queue"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/Remove_from_Queue"
        android:textColor="@color/colorPrimaryDark" />
</LinearLayout>